--- a/blog/package.json
+++ b/blog/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "hbs": "^4.0.1",
     "mongoose": "^4.11.0"
   }
 }
